# Reforge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  book.toml  build.rs  reforge.toml
.codex-plugin/: bundle.json  plugin.json
.codex/agents/: reforge-investigator.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: report-app.css  report-app.js  report.css
crates/reforge-engine/: Cargo.toml
crates/reforge-engine/src/: api.rs  concept_drift_boundary_tests.rs  concept_drift_tests.rs  dependency_graph_tests.rs  evidence_analysis.rs  execution.rs  lib.rs  pathing.rs  provenance.rs  script_similarity_tests.rs  similar_functions_tests.rs  unused_functions_tests.rs
crates/reforge-engine/src/api/: config.rs  report.rs  tests.rs
crates/reforge-engine/src/detectors/: dependency_graph.rs  dependency_graph_algorithms.rs  documentation.rs  documentation_parsing.rs  manifest.rs  similarity.rs  unused_functions.rs
crates/reforge-engine/src/detectors/data_flow/: coverage.rs  dynamic.rs  mod.rs  model.rs  observe.rs  policy.rs  tests.rs
crates/reforge-engine/src/detectors/data_flow/dynamic/: imports.rs  index.rs
crates/reforge-engine/src/detectors/data_flow/observe/: tests.rs
crates/reforge-engine/src/detectors/data_flow/rust/: analysis.rs  mod.rs  resolution.rs
crates/reforge-engine/src/detectors/data_flow/tests/: observe_fixtures.rs
crates/reforge-engine/src/detectors/dependency_graph/: resolution.rs  resolution_csharp.rs
crates/reforge-engine/src/detectors/drift/: analysis.rs  compatibility.rs  detections.rs  mod.rs
crates/reforge-engine/src/detectors/drift/analysis/: constants.rs  messages_and_boundaries.rs  naming.rs
crates/reforge-engine/src/detectors/manifest/: policy.rs  specs.rs
crates/reforge-engine/src/detectors/similarity/: additional_tests.rs  comparison.rs  index.rs  index_tests.rs
crates/reforge-engine/src/detectors/structure/: function_detections.rs  mod.rs  parameters.rs  syntax_metrics.rs
crates/reforge-engine/src/detectors/structure/analysis/: aggregation.rs  literals_and_patterns.rs  test_risk.rs  types_and_imports.rs
crates/reforge-engine/src/execution/: effective_config.rs  thresholds.rs  values.rs
crates/reforge-engine/src/lang/: mod.rs
crates/reforge-engine/src/model/: coverage.rs  data_flow.rs  evidence.rs  ids.rs  mod.rs  report.rs  subject.rs
crates/reforge-engine/src/scan/: anchors.rs  churn.rs  config.rs  coverage.rs  coverage_languages.rs  detection_control.rs  mod.rs  paths.rs  progress.rs  signals.rs  thresholds.rs  walk.rs
crates/reforge-engine/src/scan/config/: data_flow.rs
crates/reforge-output/: Cargo.toml
crates/reforge-output/src/: human.rs  lib.rs
crates/reforge-schema/: Cargo.toml
crates/reforge-unity-engine/: Cargo.toml
crates/reforge-unity-engine/src/: assembly_scanning.rs  asset_scanning.rs  csharp_scanning.rs  lib.rs  projection.rs  scanning.rs
docs/: README.md  SUMMARY.md  agent-workflows.md  analyses.md  architecture.md  calibration-samples.md  configuration.md  contributing.md  dataflow.md  detectors.md  metric-ontology.md  metrics-model.md  release.md  report-app.md  report-schema.md  upgrading-to-0.2.md  user-guide.md
docs/theme/: reforge.css
scripts/: build-docs.ps1  build-docs.sh  install-agent-skill.bat  install-agent-skill.ps1  install-agent-skill.sh  install-agent-workflow.bat  install-agent-workflow.ps1  install-agent-workflow.sh  install-reforge.bat  install-reforge.ps1  install-reforge.sh  serve-docs.ps1  serve-docs.sh  test-install-agent-workflow.ps1  test-install-agent-workflow.sh
skills/: SKILL.template.md
skills/reforge-analyze/: SKILL.md
skills/reforge-apply/: SKILL.md
skills/reforge-plan/: SKILL.md
skills/reforge-scan/: SKILL.md
skills/reforge-verify/: SKILL.md
src/: agent_drift.rs  agent_drift_analysis.rs  agent_drift_tests.rs  baseline.rs  baseline_lineage.rs  calibration.rs  cli.rs  concept_drift_tests.rs  dependency_graph_tests.rs  evidence_analysis.rs  fingerprint.rs  language.rs  main.rs  pathing.rs  provenance.rs  report.rs  report_tests.rs  scan_documentation_tests.rs  scanner.rs  scanner_tests.rs  script_similarity_tests.rs  similar_functions.rs  similar_functions_tests.rs  structural.rs  structural_analysis.rs  structural_regression_tests.rs  structural_tests.rs  unity.rs  unused_functions_tests.rs  workflow.rs
src/calibration/: training.rs
src/cli/: commands.rs  scan_args.rs  thresholds.rs  values.rs
src/detectors/: dependency_graph.rs  documentation.rs  documentation_parsing.rs  manifest.rs  mod.rs  similarity.rs  unused_functions.rs
src/evidence_analysis/: clusters.rs
src/lang/: mod.rs
src/model/: baseline.rs  coverage.rs  data_flow.rs  evidence.rs  ids.rs  mod.rs  project.rs  report.rs  subject.rs  unity.rs
src/output/: html.rs  human.rs  mod.rs  sarif.rs
src/report_tests/: human_and_scoring.rs  schema_and_formats.rs
src/scan/: agent_evidence.rs  anchors.rs  churn.rs  config.rs  config_output.rs  coverage.rs  coverage_languages.rs  coverage_receipts.rs  finding_control.rs  mod.rs  paths.rs  progress.rs  source.rs  thresholds.rs  walk.rs
src/scanner_tests/: config_and_scoring.rs  scanning.rs
src/scoring/: clusters.rs  hotspots.rs  mod.rs  policy.rs
tests/: cli_process.rs
tools/reforge/: Cargo.toml
tools/reforge-unity/: Cargo.toml
tools/reforge-unity/src/: main.rs
tools/reforge-unity/tests/: cli.rs
tools/reforge-workflow/: Cargo.toml
tools/reforge-workflow/agents/: reforge-investigator.toml
tools/reforge-workflow/skills/reforge-apply/: SKILL.md
tools/reforge-workflow/skills/reforge-plan/: SKILL.md
tools/reforge-workflow/skills/reforge-plan/agents/: openai.yaml
tools/reforge-workflow/skills/reforge-plan/references/: codebase.md  documentation.md  duplication-drift.md
tools/reforge-workflow/skills/reforge-verify/: SKILL.md
tools/reforge-workflow/src/: artifact.rs  checks.rs  main.rs  storage.rs  validation.rs  verification.rs
tools/reforge/src/: configuration.rs  lib.rs  main.rs  unit_tests.rs  validation.rs
tools/reforge/tests/: cli.rs
(+91 files in other folders)
