[package]
name = "reforge"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Detect refactoring signals across source trees"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/LyleMi/Reforge"
homepage = "https://lylemi.github.io/Reforge/"
documentation = "https://lylemi.github.io/Reforge/"
keywords = ["analysis", "cli", "refactoring", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ignore = "0.4"
toml = "1.1"
tree-sitter = "0.26.10"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
terminal_size = "0.4.4"
