[package]
name = "reforge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Execution engine for Reforge Codebase and Dataflow analyses"
build = "../../build.rs"

[dependencies]
anyhow.workspace = true
globset.workspace = true
ignore.workspace = true
reforge-schema = { path = "../reforge-schema" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-php.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
terminal_size.workspace = true

[lints]
workspace = true
