[package]
name = "reforge-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reforge-schema = { path = "../reforge-schema" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
