[package]
name = "reforge-unity-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Independent Unity analysis engine for Reforge"

[dependencies]
anyhow.workspace = true
reforge-schema = { path = "../reforge-schema" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
